test/sema/negative/literal_overflow.impala
fn check_literals() -> () {
    let x : i16 = 0x8000i16;
    let y : i32 = 0x80000000i32;
    let z : i64 = 0x8000000000000000i64;
}
