test/sema/negative/literal_overflow.output
sema/negative/literal_overflow.impala:2 col 19 - 27: error: literal out of range for type 'i16'
sema/negative/literal_overflow.impala:3 col 19 - 31: error: literal out of range for type 'i32'
sema/negative/literal_overflow.impala:4 col 19 - 39: error: literal out of range for type 'i64'
